interleaving datasets py

--- a/fine-tune-whisper-streaming-cf11-el-v2.ipynb
+++ b/fine-tune-whisper-streaming-cf11-el-v2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "7f9e743c",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "f14d4693",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "088fbe80",
    "metadata": {},
    "outputs": [
@@ -198,16 +198,160 @@
       "Found cached dataset common_voice_11_0 (/home/farsipal/.cache/huggingface/datasets/mozilla-foundation___common_voice_11_0/el/11.0.0/f8e47235d9b4e68fa24ed71d63266a02018ccf7194b2a8c9c598a5f3ab304d9f)\n",
       "Found cached dataset common_voice_11_0 (/home/farsipal/.cache/huggingface/datasets/mozilla-foundation___common_voice_11_0/el/11.0.0/f8e47235d9b4e68fa24ed71d63266a02018ccf7194b2a8c9c598a5f3ab304d9f)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset fleurs/el_gr to /home/farsipal/.cache/huggingface/datasets/google___fleurs/el_gr/2.0.0/aabb39fb29739c495517ac904e2886819b6e344702f0a5b5283cb178b087c94a...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "066aaa8c6dba4dcba84ae7cdd2f9210f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/64.8M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67df547e49594ae8974e7a2b11ef3ced",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "016c4103d8e94c5fad0ef3a4dabccd01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/2.40G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing checksums of downloaded files. They can be used for integrity verification. You can disable this by passing ignore_verifications=True to load_dataset\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "edf690d8493d4dca961aa975e357f130",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Computing checksums: 100%|##########| 1/1 [00:05<00:00,  5.30s/it]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58936c672d824f538466575e577ab48b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db29454f01c248e487c942ef4b1defc0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1fb04809d79b4ef994c7083656e47b1e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87644587fa0443d595278517249a9688",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset fleurs downloaded and prepared to /home/farsipal/.cache/huggingface/datasets/google___fleurs/el_gr/2.0.0/aabb39fb29739c495517ac904e2886819b6e344702f0a5b5283cb178b087c94a. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset fleurs (/home/farsipal/.cache/huggingface/datasets/google___fleurs/el_gr/2.0.0/aabb39fb29739c495517ac904e2886819b6e344702f0a5b5283cb178b087c94a)\n",
+      "Found cached dataset fleurs (/home/farsipal/.cache/huggingface/datasets/google___fleurs/el_gr/2.0.0/aabb39fb29739c495517ac904e2886819b6e344702f0a5b5283cb178b087c94a)\n"
+     ]
     }
    ],
    "source": [
     "from datasets import IterableDatasetDict\n",
     "# Please use a read access token below\"\n",
-    "access_token = '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'\n",
+    "#access_token = 'hf_access-token-here'\n",
     "raw_datasets = IterableDatasetDict()\n",
     "\n",
     "raw_datasets[\"train\"] = load_whole_dataset(\"mozilla-foundation/common_voice_11_0\", \"el\", split=\"train+validation\", use_auth_token=access_token) \n",
-    "raw_datasets[\"test\"] = load_whole_dataset(\"mozilla-foundation/common_voice_11_0\", \"el\", split=\"test\", use_auth_token=access_token)"
+    "raw_datasets[\"test\"] = load_whole_dataset(\"mozilla-foundation/common_voice_11_0\", \"el\", split=\"test\", use_auth_token=access_token)\n",
+    "\n",
+    "raw_datasets[\"train\"] = load_whole_dataset(\"google/fleurs\", \"el_gr\", split=\"train+validation\", use_auth_token=access_token) \n",
+    "raw_datasets[\"test\"] = load_whole_dataset(\"google/fleurs\", \"el_gr\", split=\"test\", use_auth_token=access_token)"
    ]
   },
   {
