--- a/interleave_streaming_datasets.ipynb
+++ b/interleave_streaming_datasets.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6a5c0357",
    "metadata": {
     "collapsed": false,
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "794aaced",
    "metadata": {
     "collapsed": false,
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c53344f3-c315-430a-a2f3-57aea6bb0e17",
    "metadata": {},
    "outputs": [],
@@ -107,6 +107,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f34f8517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_name = \"mozilla-foundation/common_voice_11_0,google/fleurs\"\n",
+    "dataset_config_name = \"el,el_gr\"\n",
+    "text_column_name = \"sentence,transcription\"\n",
+    "train_split =\"train+validation,train+validation\"\n",
+    "test_split  = \"test,-\" # we want the test to come from one dataset only\n",
+    "\n",
+    "dataset_names=dataset_name.split(\",\")\n",
+    "dataset_config_names=dataset_config_name.split(\",\")\n",
+    "text_column_names=text_column_name.split(\",\")\n",
+    "train_spllits = train_split.split(\",\")\n",
+    "test_spllits = test_split.split(\",\")\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "215541f6-ee1c-4104-b43c-fa3f7fce0494",
    "metadata": {},
@@ -132,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "61eb4cb1-ee27-4270-a474-1bb33e1df65f",
    "metadata": {},
    "outputs": [],
@@ -225,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "8ae90f83-4ecd-46a3-98be-bd75706e0d88",
    "metadata": {},
    "outputs": [],
@@ -240,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "2e31aa85",
    "metadata": {},
    "outputs": [
@@ -276,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "75b3355a-3c06-4d23-af43-2b93b1ad70b2",
    "metadata": {},
    "outputs": [
@@ -284,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading metadata...: 1914it [00:00, 6148.46it/s]\n"
+      "Reading metadata...: 1914it [00:00, 5791.51it/s]\n"
      ]
     },
     {
@@ -298,7 +319,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading metadata...: 1701it [00:00, 6318.92it/s]\n"
+      "Reading metadata...: 1701it [00:00, 5782.49it/s]\n"
      ]
     },
     {
@@ -345,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "ed20e9cd-31c2-44cb-872b-333378a92fd1",
    "metadata": {},
    "outputs": [],
@@ -368,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "26e42417-4bd2-46f8-914e-3a6f9f3471ac",
    "metadata": {},
    "outputs": [],
@@ -394,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "0babac71-9157-4d0f-a8a8-184547bdf501",
    "metadata": {},
    "outputs": [
@@ -402,7 +423,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading metadata...: 1914it [00:00, 9923.14it/s]\n"
+      "Reading metadata...: 1914it [00:00, 8234.86it/s]\n"
      ]
     },
     {
@@ -416,7 +437,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading metadata...: 1701it [00:00, 12544.57it/s]\n"
+      "Reading metadata...: 1701it [00:00, 5668.92it/s]\n"
      ]
     },
     {
