--- a/interleave_streaming_datasets.ipynb
+++ b/interleave_streaming_datasets.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "6a5c0357",
    "metadata": {
     "collapsed": false,
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "794aaced",
    "metadata": {
     "collapsed": false,
@@ -46,7 +46,8 @@
    "outputs": [],
    "source": [
     "from datasets import Audio, interleave_datasets, IterableDataset, load_dataset, SplitDict\n",
-    "from typing import List, Optional"
+    "from typing import List, Optional\n",
+    "from torch.utils.data import IterableDataset, DataLoader"
    ]
   },
   {
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "c53344f3-c315-430a-a2f3-57aea6bb0e17",
    "metadata": {},
    "outputs": [],
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "c53344f3-c315-430a-a2f3-57aea6bb0e17",
    "metadata": {},
    "outputs": [],
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "f34f8517",
    "metadata": {},
    "outputs": [],
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "61eb4cb1-ee27-4270-a474-1bb33e1df65f",
    "metadata": {},
    "outputs": [],
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "8ae90f83-4ecd-46a3-98be-bd75706e0d88",
    "metadata": {},
    "outputs": [],
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "2e31aa85",
    "metadata": {},
    "outputs": [
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "75b3355a-3c06-4d23-af43-2b93b1ad70b2",
    "metadata": {},
    "outputs": [
@@ -305,7 +306,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading metadata...: 1914it [00:00, 5791.51it/s]\n"
+      "Reading metadata...: 1914it [00:00, 5805.35it/s]\n"
      ]
     },
     {
@@ -319,7 +320,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading metadata...: 1701it [00:00, 5782.49it/s]\n"
+      "Reading metadata...: 1701it [00:00, 6077.88it/s]\n"
      ]
     },
     {
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ed20e9cd-31c2-44cb-872b-333378a92fd1",
    "metadata": {},
    "outputs": [],
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "26e42417-4bd2-46f8-914e-3a6f9f3471ac",
    "metadata": {},
    "outputs": [],
