updates from huggingf to original master

--- a/fine-tune-whisper-streaming.ipynb
+++ b/fine-tune-whisper-streaming.ipynb
@@ -577,6 +577,9 @@
     "    if do_normalize_eval:\n",
     "        pred_str = [normalizer(pred) for pred in pred_str]\n",
     "        label_str = [normalizer(label) for label in label_str]\n",
+    "        # filtering step to only evaluate the samples that correspond to non-zero references:\n",
+    "        pred_str = [pred_str[i] for i in range(len(pred_str)) if len(label_str[i]) > 0]\n",
+    "        label_str = [label_str[i] for i in range(len(label_str)) if len(label_str[i]) > 0]\n",
     "\n",
     "    wer = 100 * metric.compute(predictions=pred_str, references=label_str)\n",
     "\n",
@@ -858,7 +861,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 ('whisper')",
    "language": "python",
    "name": "python3"
   },
@@ -872,7 +875,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "56df8cc7a7ee396247f1aaa79087483e047b61a4716ebb1fc601848c69339422"
+   }
   }
  },
  "nbformat": 4,
